<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    android:layout_marginTop="38dp">

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#3f7ab4"
        android:padding="10dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@android:color/transparent"
        android:background="@drawable/curved_background" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#3f7ab4"
        android:layout_marginTop="8dp"

        android:layout_marginBottom="26dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"

        android:layout_marginBottom="16dp"
        android:background="@drawable/border_background"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/tvStopwatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="00:00"
            android:textColor="#3f7ab4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnStartStopwatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#3f7ab4"
                android:padding="8dp"
                android:text="@string/start"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnStopStopwatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#f44336"
                android:padding="8dp"
                android:text="@string/stop"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnResetStopwatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffa000"
                android:padding="8dp"
                android:text="@string/reset"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="18dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:src="@drawable/ic_due_date"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/due_date" />

            <TextView
                android:text="@string/due_date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:src="@drawable/ic_time"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/time1" />

            <TextView
                android:text="@string/time2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:src="@drawable/ic_reminder"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/reminder" />

            <TextView
                android:text="@string/reminder_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvReminderTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:src="@drawable/ic_description"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/description1" />

            <TextView
                android:text="@string/description2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:src="@drawable/ic_status"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/status1" />

            <TextView
                android:text="@string/status2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:textAlignment="textEnd" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
